@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="3.5" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -72,6 +72,7 @@
     <Compile Include="Mono.Rocks.Tests\UInt16Test.cs" />
     <Compile Include="Mono.Rocks.Tests\UInt32Test.cs" />
     <Compile Include="Mono.Rocks.Tests\UInt64Test.cs" />
+    <Compile Include="Mono.Rocks.Tests\MutableLookupTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Mono.Rocks.csproj">
