@@ -1,3 +1,7 @@
+2009-11-06  Eric Maupin  <me@ermau.com>
+
+	* MutableLookup.cs: Mutable implementation of ILookup<TKey,TElement>
+
 2009-11-03  Jonathan Pryor  <jpryor@novell.com>
 
 	* Delegates.cs, Eithers.cs, Lamdas.cs, Tuples.cs: Flush header.
@@ -12,7 +16,7 @@
 	  reason to exist (to sanely cope with potentially infinite sequences
 	  which change each time you call .GetEnumerator() on them).
 
-2009-09-23	Eric Maupin  <me@ermau.com>
+2009-09-23  Eric Maupin  <me@ermau.com>
 
 	* OrderedDictionary.cs: Added a dictionary that maintains insertion
 	  order without losing hashing speed benefits.
