@@ -1,3 +1,10 @@
+2009-11-06  Eric Maupin  <me@ermau.com>
+
+	* Mono.Rocks.dll.sources, Mono.Rocks.csproj:
+	  Add Mono.Rocks/MutableLookup.cs to the build.
+	* Mono.Rocks.Tests.dll.sources, Tests/Mono.Rocks.Tests.csproj:
+	  Add Mono.Rocks/MutableLookupTest.cs to the build.
+
 2009-11-06  Jonathan Pryor  <jpryor@novell.com>
 
 	* Mono.Rocks.csproj: Remove the BeforeBuild requirement.  This breaks
